LEAF 3356 revert post val, wrap or chain op some events, fix multisel style issue

--- a/docker/vue-app/src/LEAF_IfThen.scss
+++ b/docker/vue-app/src/LEAF_IfThen.scss
@@ -26,12 +26,12 @@ $BG-DarkNavy: #162e51;
         justify-content: space-between;
         align-items: center;
 
-        div {
+        > div {
             display: inline-block;
             width: 30%;
         }
     }
-    select, input {
+    select, input:not(.choices__input) {
         font-size: 85%;
         padding: 0.15em;
         text-overflow: ellipsis;
